<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ms2ms</groupId>
    <artifactId>ms2ms</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>uk.ac.liv.pgb</groupId>
            <artifactId>mzqLibrary</artifactId>
            <version>1.0-beta-2_3_2016</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.compomics.thermo_msf_parser/thermo_msf_parser_API -->
        <dependency>
            <groupId>com.compomics.thermo_msf_parser</groupId>
            <artifactId>thermo_msf_parser_API</artifactId>
            <version>2.0.6</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/tw.edu.ntu.csie/libsvm -->
        <dependency>
            <groupId>tw.edu.ntu.csie</groupId>
            <artifactId>libsvm</artifactId>
            <version>3.23</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core -->
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-ext</artifactId>
            <version>0.9.1</version>
        </dependency>
        <dependency>
            <groupId>de.mpc.pia</groupId>
            <artifactId>PIA</artifactId>
            <version>20150829</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/pia-1.0.0-dev.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.hfg</groupId>
            <artifactId>com_hfg</artifactId>
            <version>20150829</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/com_hfg-20150829.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.ms2ms</groupId>
            <artifactId>javaRdata</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/javaRdata-1.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.ms2ms</groupId>
            <artifactId>javaRdata</artifactId>
            <version>1.0-SNAPSHOT</version>
            <classifier>tests</classifier>
            <type>test-jar</type>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/javaRdata-1.0-SNAPSHOT-tests.jar</systemPath>
        </dependency>
    </dependencies>

    <repositories>
        <!-- Compomics Genesis Maven 2 repository -->
        <repository>
            <id>genesis-maven2-repository</id>
            <name>Genesis maven2 repository</name>
            <url>http://genesis.UGent.be/maven2</url>
            <layout>default</layout>
        </repository>

    </repositories>
</project>